# vmm-example

./: .gitignore  Cargo.toml  README.md  mk-initramfs.sh  vmm-kernel.config
src/: main.rs
